<resources>
    <string name="app_name">Laundry</string>
    <string name="pelanggan_id">ID Pelanggan</string>
    <string name="pelanggan_nama">Nama Pelanggan</string>
    <string name="alamat">Alamat</string>
    <string name="nohp">No HP</string>
    <string name="hubungi">Hubungi</string>
    <string name="lihat">Lihat</string>
    <string name="pegawai_id">ID Pegawai</string>
    <string name="pegawai_nama">Nama Pegawai</string>
    <string name="cabang_id">ID Cabang</string>
    <string name="cabang_namamanager">Nama Manager</string>
    <string name="tambah_cabang">Tambah Cabang</string>
    <string name="simpan">Simpan</string>
    <string name="nama_cabang">Nama Cabang</string>
    <string name="tambah_pegawai">Tambah Pegawai</string>
    <string name="tambah_pelanggan">Tambah Pelanggan</string>
    <string name="Layanan">Layanan</string>
    <string name="pilih_layanan">Pilih Layanan Laundry</string>
    <string name="cuci_kering">Cuci Kering</string>
    <string name="cuci_setrika">Cuci Setrika</string>
    <string name="setrika">Setrika</string>
    <string name="cuci_cepat">Cuci Cepat</string>
    <string name="berat_pakaian">Berat Pakaian (kg)</string>
    <string name="masukan_berat">Masukan Berat (kg)</string>
    <string name="hitung">Hitung</string>
    <string name="harga">"Harga "</string>
    <string name="id_layanan">ID Layanan</string>
    <string name="nama_layanan">Nama Layanan</string>
    <string name="validasi_tambah_pelanggan" translatable="false">pelanggan_tambah_validasi</string>
    <string name="validasi_sukses" translatable="false">Sukses</string>
    <string name="validasi_gagal" translatable="false">Gagal</string>
    <string name="tvestimasi">Estimasi Hari Ini</string>
    <string name="transaksi">Transaksi</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="laporan">Laporan</string>
    <string name="akun">Akun</string>
    <string name="tambahan">Tambahan</string>
    <string name="pegawai">Pegawai</string>
    <string name="cabang">Cabang</string>
    <string name="printer">Printer</string>
    <string name="q1">Kami tidak pernah meragukan tamu meskipun permintaanya aneh aneh</string>
    <string name="q2">Kepuasan anda adalah prioritas kami</string>
    <string name="terdaftar">Terdaftar</string>
    <string name="tterdaftar">Terdaftar</string>
    <string name="talamat">Alamat</string>
    <string name="tno">No HP</string>
    <string name="id_pelanggan">ID: %s</string>
    <string name="login">Masuk</string>
    <string name="pw">Kata Sandi</string>
    <string name="tambahlayanan">Tambah Layanan</string>
    <string name="daftar">Mendaftar</string>
    <string name="edit_pelanggan">Edit Pelanggan</string>
    <string name="hargakg">Harga / Kg</string>
    <string name="namamanager">Nama Manager</string>
    <string name="edit_layanan">Edit Layanan</string>
    <string name="edit_tambahan">Edit Tambahan</string>
    <string name="pilih_pelanggan">Pilih Pelanggan</string>
    <string name="data_pelanggan">Data Pelanggan</string>
    <string name="layanan_utama">Layanan Utama</string>
    <string name="pilih_layanann">Tambah Layanan</string>
    <string name="layanan_tambahan">Layanan Tambahan</string>
    <string name="proses">Proses</string>
    <string name="cari">Cari</string>
    <string name="hapus">Hapus</string>
    <string name="konvirmasi">Konfirmasi Data</string>
    <string name="berat">Berat</string>
    <string name="total">Total</string>
    <string name="batal">Batal</string>
    <string name="bayar">Pembayaran</string>
    <string name="pilih">Pilih Metode Pembayaran</string>
    <string name="langsung">Bayar Langsung</string>
    <string name="nanti">Bayar Nanti</string>
    <string name="GoPay">GoPay</string>
    <string name="idtransaksi">Id Transaksi</string>
    <string name="tanggal">Tanggal</string>
    <string name="metode">Metode Pembayaran</string>
    <string name="kirim_whatsapp">Whatsapp</string>
    <string name="cetak">Cetak</string>
    <string name="edit_pegawai">Edit Pegawai</string>
    <string name="databerhasildibuat">Data Berhasil Dibuat</string>
    <string name="datagagaldibuat">Data Gagal Dibuat</string>
    <string name="harapisidata">Harap Isi Semua Field</string>
    <string name="hargaharus">Harga Harus Berupa Angka</string>
    <string name="datadiperbarui">Data Berhasil Diperbarui</string>
    <string name="datagagaldiperbarui">Data Gagal Diperbarui</string>
    <string name="transaksiberhasildibuat">Transaksi Berhasil Dibuat</string>
    <string name="transaksigagaldibuat">Transaksi Gagal Dibuat</string>
    <string name="watidak">WhatsApp Tidak Ditemukan</string>
    <string name="nohptdk">Nomor Hp Tidak Valid</string>
    <string name="nohptdktersedia">Nomor Hp Tidak Tersedia</string>
    <string name="databelum">Data Belum Dimuat</string>
    <string name="dihapus">Dihapus</string>
    <string name="ditambahkan">Ditambahkan</string>
    <string name="sudahada">Sudah Ada Dalam Daftar</string>
    <string name="silahkanppelanggan">Silahkan Pilih Pelanggan</string>
    <string name="silahkanplayanan">Silahkan Pilih Layanan</string>
    <string name="silahkanberat">Silahkan Masukkan Berat</string>
    <string name="beratharus">Berat Harus Berupa Angka Lebih Dari 0</string>
    <string name="terlaluberat">Berat Tidak Boleh Lebih Dari 1000kg</string>
    <string name="hrpisinohppw">Harap isi No HP dan Password</string>
    <string name="lgnbrhsl">Login Berhasil</string>
    <string name="pwslh">Password Salah</string>
    <string name="nohptdktrdftr">No Hp Tidak Terdaftar</string>
    <string name="gagalakses">Gagal Mengakses Database %1$s</string>
    <string name="nohpsdh">No Hp Sudah Terdaftar Silahkan Login</string>
    <string name="datadihapus">Data Dihapus</string>
</resources>