<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layanan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Layanan.Layanan"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:layout_marginStart="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/layanan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Layanan"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Judul -->
        <TextView
            android:id="@+id/tvJudul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_layanan"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewLayanan"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"/>

        <!-- Input berat pakaian -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berat_pakaian"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etBeratPakaian"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:hint="@string/masukan_berat"
            android:textColor="@color/text_color"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnHitung"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/etNH"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/backinverse"
            android:text="@string/hitung"
            android:textColor="@color/text_inverse_dark"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/etNH"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/backinverse"
            android:text="@string/simpan"
            android:textColor="@color/textinverse"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>