<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/konvirmasi_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Transaksi.Data_konfirmasi.Konfirmasi_data">

    <LinearLayout
        android:id="@+id/Head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvKonvirmasiData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/konvirmasi"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:layout_marginBottom="2dp"/>

        <!-- Baris Nama Pelanggan -->
            <TextView
                android:id="@+id/tvNamaPelanggan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/pelanggan_nama"
                android:textSize="30sp"
                android:textColor="@color/text_color"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tvNoHp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/nohp"
                android:textSize="25sp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp"/>

            <TextView
                android:id="@+id/tvLayanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/nama_layanan"
                android:textSize="25sp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp"
                android:layout_marginTop="10dp"/>

        <!-- Baris Harga -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHargatext1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/harga"
                android:textSize="25sp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/tvHarga"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text=""
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvTambahLayanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layanan_tambahan"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_color"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDataTambahan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/Head"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"
        tools:listitem="@layout/cardview_tambahan"/>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/rvDataTambahan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTotaltext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/footerButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnBatal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/batal"
            android:backgroundTint="@color/backinverse"
            android:textSize="15sp"
            android:textColor="@color/textinverse"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnBayar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bayar"
            android:backgroundTint="@color/backinverse"
            android:textSize="15sp"
            android:textColor="@color/textinverse" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>