<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardPelanggan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    android:background="@color/background"
    app:cardElevation="4dp"
    android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Nama Pelanggan -->
            <TextView
                android:id="@+id/tvNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pelanggan_nama"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/text_color"
                android:layout_marginBottom="2dp"/>

            <!-- Alamat -->
            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:layout_marginBottom="2dp"/>

            <!-- Nomor HP -->
            <TextView
                android:id="@+id/tvNoHp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nohp"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/tvCabang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cabang"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:layout_marginBottom="16dp" />

            <!-- Tombol Hubungi dan Lihat -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <!-- Tombol Hubungi -->
                <Button
                    android:id="@+id/btnHubungi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hubungi"
                    android:backgroundTint="@color/backinverse"
                    android:textSize="15sp"
                    android:textColor="@color/textinverse"
                    android:layout_marginEnd="8dp" />

                <!-- Tombol Lihat -->
                <Button
                    android:id="@+id/btnLihat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lihat"
                    android:backgroundTint="@color/backinverse"
                    android:textSize="15sp"
                    android:textColor="@color/textinverse" />
            </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>