<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardPelangganTransaksi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    android:background="@color/background"
    app:cardElevation="4dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Nama Pelanggan -->
        <TextView
            android:id="@+id/tvNama"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/pelanggan_nama"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_color"
            android:layout_marginBottom="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Terdaftar -->
            <TextView
                android:id="@+id/tvAlamattext1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/talamat"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp" />
            <!-- Alamat -->
            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:layout_marginBottom="2dp"/></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Terdaftar -->
            <TextView
                android:id="@+id/tvNoHptext1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tno"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp" />
            <!-- Nomor HP -->
            <TextView
                android:id="@+id/tvNoHp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nohp"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/text_color"
                android:paddingBottom="2dp" /></LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>