<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tambah_layanan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:background="@color/background"
    tools:context=".layanan.tambahan_layanan">

    <TextView
        android:id="@+id/tvTambahLayanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambahlayanan"
        android:textStyle="bold"
        android:textSize="27sp"
        android:textColor="@color/text_color"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvNamaLayanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTambahLayanan"
        android:layout_marginTop="15dp"
        android:text="@string/nama_layanan"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etNamaLayanan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNamaLayanan"
        android:hint="@string/nama_layanan"
        android:inputType="text"
        android:background="@drawable/et"
        android:padding="8dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etNamaLayanan"
        android:layout_marginTop="15dp"
        android:text="@string/harga"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etHarga"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHarga"
        android:hint="@string/harga"
        android:inputType="number"
        android:background="@drawable/et"
        android:padding="8dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvCabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etHarga"
        android:layout_marginTop="15dp"
        android:text="@string/cabang"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etCabang"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCabang"
        android:hint="@string/cabang"
        android:inputType="text"
        android:background="@drawable/et"
        android:padding="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/backinverse"
        android:text="@string/simpan"
        android:textColor="@color/textinverse"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>