<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tambah_pegawai"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pegawai.tambahan_pegawai">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TambahPegawai"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp"
        tools:context=".pegawai.tambahan_pegawai">

        <TextView
            android:id="@+id/tvTambahPegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tambah_pegawai"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/pegawai_nama"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvTambahPegawai" />

        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et"
            android:hint="@string/pegawai_nama"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNama" />

        <TextView
            android:id="@+id/tvAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/alamat"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/etNama" />

        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et"
            android:hint="@string/alamat"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAlamat" />

        <TextView
            android:id="@+id/tvNoHp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nohp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/etAlamat" />

        <EditText
            android:id="@+id/etNoHp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et"
            android:hint="@string/nohp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNoHp" />

        <TextView
            android:id="@+id/tvNamaCabang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etNoHp"
            android:layout_marginTop="15dp"
            android:text="@string/nama_cabang"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etNamaCabang"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNamaCabang"
            android:hint="@string/nama_cabang"
            android:background="@drawable/et"
            android:padding="8dp"
            android:layout_marginTop="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/et"
            android:backgroundTint="@color/black"
            android:text="@string/simpan"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/etNamaCabang" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>